--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,37 +12,33 @@
     <div class="wrapper">
         <div class="navbar container">
 
-            <a id="author-name" class="alignable pull-left" href=".">Sezer Mehmed</a>
+            <a id="author-name" class="alignable pull-left" href="index.html">Sezer  Mehmed</a>
             <ul id="navlist" class="alignable pull-right navbar-ul">
 
 
-                <li class="alignable pull-left nav-list"><a href="cv">CV</a>
-                    /
+                <li class="alignable pull-left nav-list">
+                    <a href="javascript:alert('🤓 Not Ready Yet 👾');">CV</a>
+                </li>
+               
+
+                <li class="alignable pull-left nav-list">
+                    <a href="https://github.com/sezermehmed/" target="_blank"> Github</a>
                 </li>
 
 
-                <li class="alignable pull-left nav-list"><a href="research">Code</a>
-                    /
+                <li class="alignable pull-left nav-list">
+                    <a href="mailto:sezermehmed98@gmail.com">Send email</a>
                 </li>
 
 
-                <li class="alignable pull-left nav-list"><a href="blog">Blog</a>
-                    /
-                </li>
-
-
-                <li class="alignable pull-left nav-list"><a href="contact">Contact</a>
-
-
-                </li>
 
             </ul>
         </div>
         <div style="clear:both"></div>
         <style>
             body {
-                background-color: rgb(28, 29, 46);
-                color: rgb(236, 236, 236);
+                background-color: rgb(255, 255, 255);
+                color: rgb(0, 0, 0);
             }
 
             .navbar {
@@ -51,22 +48,27 @@
 
             body {
                 margin: 0;
-                font-family: "Inconsolata";
+                font-family: "Seido Round";
                 height: 100%
             }
 
             a {
                 text-decoration: none;
-                color: #edf398
+                color: #3b3b3a;
+                font-size: 25px
             }
 
             a:hover {
                 text-decoration: underline
             }
-
+            @font-face {
+            font-family: Seido;
+            src: url(Bw\ Seido\ Round\ DEMO\ Regular\ 400.otf);
+            }
             #author-name {
-                font-size: 30px;
-                color: #b62278;
+                font-family: "Seido";
+                font-size: 25px;
+                color: #3b3b3b;
                 display: inline-block
             }
 
@@ -79,7 +81,7 @@
 
             .nav-list {
                 list-style-type: none;
-                margin: 0 5px 0 10px
+                margin: 0 10px 0 15px
             }
 
             .alignable,
