--- a/index.html
+++ b/index.html
@@ -1,119 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sezer Mehmed - Personal Website</title>
-</head>
+  </head>
 
-<body>
-    <h1 style="text-align: center;"></h1>
+  <body>
+    <h1 style="text-align: center"></h1>
     <div class="wrapper">
-        <div class="navbar container">
+      <div class="navbar container">
+        <a id="author-name" class="alignable pull-left" href="index.html"
+          >Sezer Mehmed</a
+        >
+        <ul id="navlist" class="alignable pull-right navbar-ul">
+          <li class="alignable pull-left nav-list">
+            <a href="javascript:alert('🤓 Not Ready Yet 👾');">CV</a>
+          </li>
+          <li class="alignable pull-left nav-list">
+            <a href="https://github.com/sezermehmed/" target="_blank">
+              Github</a
+            >
+              <li class="alignable pull-left nav-list">
+              <a href="https://twitter.com/Sezer__Mehmed/" target="_blank">
+                Twitter
+            </a>
+          </li>
+          </li>
+          <li class="alignable pull-left nav-list">
+            <a href="mailto:sezermehmed98@gmail.com">Send email</a>
+          </li>
+        
+        </ul>
+      </div>
+    </div>
+    <p>
+      I may want to write anything in the future, but I need some time to think
+      and improve myself.
+    </p>
 
-            <a id="author-name" class="alignable pull-left" href="index.html">Sezer  Mehmed</a>
-            <ul id="navlist" class="alignable pull-right navbar-ul">
+    <div style="clear: both"></div>
+    <style>
+      body {
+        background-color: rgb(255, 255, 255);
+        color: rgb(0, 0, 0);
+        margin: 0;
+        height: 100%;
+      }
 
+      .navbar {
+        padding: 50px 0 50px 0;
+      }
+      p {
+        text-align: center;
+        padding: 50px 0 50px;
+        font-size: larger;
+      }
 
-                <li class="alignable pull-left nav-list">
-                    <a href="javascript:alert('🤓 Not Ready Yet 👾');">CV</a>
-                </li>
-               
+      a {
+        text-decoration: none;
+        color: #3b3b3a;
+        font-size: 20px;
+      }
 
-                <li class="alignable pull-left nav-list">
-                    <a href="https://github.com/sezermehmed/" target="_blank"> Github</a>
-                </li>
+      a:hover {
+        text-decoration: underline;
+      }
 
+      @font-face {
+        font-family: Seido;
+        src: url(Bw\ Seido\ Round\ DEMO\ Regular\ 400.otf);
+      }
 
-                <li class="alignable pull-left nav-list">
-                    <a href="mailto:sezermehmed98@gmail.com">Send email</a>
-                </li>
+      #author-name {
+        font-size: 20px;
+        color: #3b3b3b;
+        display: inline-block;
+      }
 
+      .navbar-ul {
+        display: inline-block;
+        margin: 0;
+        padding: 10px 0 10px 0;
+        margin-left: 20px;
+      }
 
+      .nav-list {
+        list-style-type: none;
+        margin: 0 10px 0 15px;
+      }
 
-            </ul>
-        </div>
-        <div style="clear:both"></div>
-        <style>
-            body {
-                background-color: rgb(255, 255, 255);
-                color: rgb(0, 0, 0);
-            }
+      .alignable,
+      .pull-left,
+      .pull-right {
+        display: inline-block;
+      }
 
-            .navbar {
-                padding: 50px 0 50px 0
-            }
+      .pull-left {
+        float: left;
+      }
 
+      .pull-right {
+        float: right;
+      }
 
-            body {
-                margin: 0;
-                font-family: "Seido Round";
-                height: 100%
-            }
+      .container {
+        max-width: 700px;
+        margin: auto;
+      }
 
-            a {
-                text-decoration: none;
-                color: #3b3b3a;
-                font-size: 25px
-            }
+      .wrapper {
+        min-height: 100%;
+        font-family: "Seido";
+      }
 
-            a:hover {
-                text-decoration: underline
-            }
-            @font-face {
-            font-family: Seido;
-            src: url(Bw\ Seido\ Round\ DEMO\ Regular\ 400.otf);
-            }
-            #author-name {
-                font-family: "Seido";
-                font-size: 25px;
-                color: #3b3b3b;
-                display: inline-block
-            }
-
-            .navbar-ul {
-                display: inline-block;
-                margin: 0;
-                padding: 5px 0 5px 0;
-                margin-left: 20px
-            }
-
-            .nav-list {
-                list-style-type: none;
-                margin: 0 10px 0 15px
-            }
-
-            .alignable,
-            .pull-left,
-            .pull-right {
-                display: inline-block
-            }
-
-            .pull-left {
-                float: left
-            }
-
-            .pull-right {
-                float: right
-            }
-
-            .container {
-                max-width: 700px;
-                margin: auto
-            }
-
-            .wrapper {
-                min-height: 100%
-            }
-
-            #ins-logo {
-                margin: auto;
-                display: block;
-                max-height: 100px;
-                text-align: center
-            }
-        </style>
-</body>
-
+      #ins-logo {
+        margin: auto;
+        display: block;
+        max-height: 100px;
+        text-align: center;
+      }
+    </style>
+  </body>
 </html>
