--- a/index.html
+++ b/index.html
@@ -1,125 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sezer Mehmed - Personal Website</title>
-  </head>
+</head>
 
-  <body>
-    <h1 style="text-align: center"></h1>
+<body>
     <div class="wrapper">
-      <div class="navbar container">
-        <a id="author-name" class="alignable pull-left" href="index.html"
-          >Sezer Mehmed</a
-        >
-        <ul id="navlist" class="alignable pull-right navbar-ul">
-          <li class="alignable pull-left nav-list">
-            <a href="javascript:alert('🤓 Not Ready Yet 👾');">CV</a>
-          </li>
-          <li class="alignable pull-left nav-list">
-            <a href="https://github.com/sezermehmed/" target="_blank">
-              Github</a
-            >
-              <li class="alignable pull-left nav-list">
-              <a href="https://twitter.com/Sezer__Mehmed/" target="_blank">
-                Twitter
-            </a>
-          </li>
-          </li>
-          <li class="alignable pull-left nav-list">
-            <a href="mailto:sezermehmed98@gmail.com">Send email</a>
-          </li>
-        
-        </ul>
-      </div>
+        <div class="navbar container">
+            <a id="author-name" class="alignable pull-left" href="/">Sezer Mehmed</a>
+            <ul id="navlist" class="alignable pull-right navbar-ul">
+                <li class="alignable pull-left nav-list">
+                    <a href="javascript:alert('🤓 Not Ready Yet 👾');">CV</a>
+                </li>
+                <li class="alignable pull-left nav-list">
+                    <a href="https://github.com/sezermehmed/" target="_blank">
+                        Github</a>
+                </li>       
+                <li class="alignable pull-left nav-list">
+                    <a href="https://twitter.com/Sezer__Mehmed/" target="_blank">
+                        Twitter
+                    </a>
+                </li>
+                <li class="alignable pull-left nav-list">
+                    <a href="mailto:sezermehmed98@gmail.com">Send email</a>
+                </li>
+
+            </ul>
+        </div>
     </div>
     <p>
-      I may want to write anything in the future, but I need some time to think
-      and improve myself.
+        I may want to write anything in the future, but I need some time to think
+        and improve myself.
     </p>
 
     <div style="clear: both"></div>
     <style>
-      body {
-        background-color: rgb(255, 255, 255);
-        color: rgb(0, 0, 0);
-        margin: 0;
-        height: 100%;
-      }
+        body {
+            background-color: rgb(255, 255, 255);
+            color: rgb(0, 0, 0);
+            margin: 0;
+            height: 100%;
+        }
 
-      .navbar {
-        padding: 50px 0 50px 0;
-      }
-      p {
-        text-align: center;
-        padding: 50px 0 50px;
-        font-size: larger;
-      }
+        .navbar {
+            padding: 50px 0 50px 0;
+        }
 
-      a {
-        text-decoration: none;
-        color: #3b3b3a;
-        font-size: 20px;
-      }
+        p {
+            text-align: center;
+            padding: 50px 0 50px;
+            font-size: larger;
+        }
 
-      a:hover {
-        text-decoration: underline;
-      }
+        a {
+            text-decoration: none;
+            color: #3b3b3a;
+            font-size: 20px;
+        }
 
-      @font-face {
-        font-family: Seido;
-        src: url(Bw\ Seido\ Round\ DEMO\ Regular\ 400.otf);
-      }
+        a:hover {
+            text-decoration: underline;
+        }
 
-      #author-name {
-        font-size: 20px;
-        color: #3b3b3b;
-        display: inline-block;
-      }
+        @font-face {
+            font-family: Seido;
+            src: url(Bw\ Seido\ Round\ DEMO\ Regular\ 400.otf);
+        }
 
-      .navbar-ul {
-        display: inline-block;
-        margin: 0;
-        padding: 10px 0 10px 0;
-        margin-left: 20px;
-      }
+        #author-name {
+            font-size: 20px;
+            color: #3b3b3b;
+            display: inline-block;
+        }
 
-      .nav-list {
-        list-style-type: none;
-        margin: 0 10px 0 15px;
-      }
+        .navbar-ul {
+            display: inline-block;
+            margin: 0;
+            padding: 10px 0 10px 0;
+            margin-left: 20px;
+        }
 
-      .alignable,
-      .pull-left,
-      .pull-right {
-        display: inline-block;
-      }
+        .nav-list {
+            list-style-type: none;
+            margin: 0 10px 0 15px;
+        }
 
-      .pull-left {
-        float: left;
-      }
+        .alignable,
+        .pull-left,
+        .pull-right {
+            display: inline-block;
+        }
 
-      .pull-right {
-        float: right;
-      }
+        .pull-left {
+            float: left;
+        }
 
-      .container {
-        max-width: 700px;
-        margin: auto;
-      }
+        .pull-right {
+            float: right;
+        }
 
-      .wrapper {
-        min-height: 100%;
-        font-family: "Seido";
-      }
+        .container {
+            max-width: 700px;
+            margin: auto;
+        }
 
-      #ins-logo {
-        margin: auto;
-        display: block;
-        max-height: 100px;
-        text-align: center;
-      }
+        .wrapper {
+            min-height: 100%;
+            font-family: "Seido";
+        }
+
+        #ins-logo {
+            margin: auto;
+            display: block;
+            max-height: 100px;
+            text-align: center;
+        }
     </style>
-  </body>
+</body>
+
 </html>
