--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sezer Mehmed - Personal Website</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -14,6 +15,7 @@
             <ul id="navlist" class="alignable pull-right navbar-ul">
                 <li class="alignable pull-left nav-list">
                     <a href="javascript:alert('🤓 Not Ready Yet 👾');">CV</a>
+                    
                 </li>
                 <li class="alignable pull-left nav-list">
                     <a href="https://github.com/sezermehmed/" target="_blank">
@@ -32,93 +34,9 @@
         </div>
     </div>
     <p>
-        I may want to write anything in the future, but I need some time to think
-        and improve myself.
+       Hello there! 😎
     </p>
 
-    <div style="clear: both"></div>
-    <style>
-        body {
-            background-color: rgb(255, 255, 255);
-            color: rgb(0, 0, 0);
-            margin: 0;
-            height: 100%;
-        }
-
-        .navbar {
-            padding: 50px 0 50px 0;
-        }
-
-        p {
-            text-align: center;
-            padding: 50px 0 50px;
-            font-size: larger;
-        }
-
-        a {
-            text-decoration: none;
-            color: #3b3b3a;
-            font-size: 20px;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        @font-face {
-            font-family: Seido;
-            src: url(Bw\ Seido\ Round\ DEMO\ Regular\ 400.otf);
-        }
-
-        #author-name {
-            font-size: 20px;
-            color: #3b3b3b;
-            display: inline-block;
-        }
-
-        .navbar-ul {
-            display: inline-block;
-            margin: 0;
-            padding: 10px 0 10px 0;
-            margin-left: 20px;
-        }
-
-        .nav-list {
-            list-style-type: none;
-            margin: 0 10px 0 15px;
-        }
-
-        .alignable,
-        .pull-left,
-        .pull-right {
-            display: inline-block;
-        }
-
-        .pull-left {
-            float: left;
-        }
-
-        .pull-right {
-            float: right;
-        }
-
-        .container {
-            max-width: 700px;
-            margin: auto;
-        }
-
-        .wrapper {
-            min-height: 100%;
-            font-family: "Seido";
-        }
-
-        #ins-logo {
-            margin: auto;
-            display: block;
-            max-height: 100px;
-            text-align: center;
-        }
-    </style>
 </body>
 
 </html>
