--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="navbar container">
             <a id="author-name" class="alignable pull-left" href="/">Sezer Mehmed</a>
             <ul id="navlist" class="alignable pull-right navbar-ul">
+                
                 <li class="alignable pull-left nav-list">
                     <a href="javascript:alert('🤓 Not Ready Yet 👾');">CV</a>
                     
@@ -33,13 +34,8 @@
             </ul>
         </div>
     </div>
+        <iframe src="https://giphy.com/embed/QHE5gWI0QjqF2" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     <p>
-       Hello there! 😎
+       Welcome :)
     </p>
-    <div class="fasttype">
-            <a href="https://10fastfingers.com/typing-test/english"><img src="http://img.10fastfingers.com/badge/typing-test_1_AQ.png" alt="Typing Test" /></a><p>Visit the <a href="https://10fastfingers.com/typing-test/english">Typing Test</a> and try!</p>
-    </div>
-
-</body>
-
 </html>
